--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         $('#messages').append($('<li>').text(msg));
         localsocket.emit('chat message', msg);
       });
+      localsocket.on('chat message', function(msg){
+        $('#messages').append($('<li>').text(msg));
+      });
     </script>
   </body>
 </html>
