made payload array

--- a/index.html
+++ b/index.html
@@ -24,16 +24,13 @@
       var socket = io.connect('http://ancient-plateau-32924.herokuapp.com:80/');;
       var localsocket = io.connect('http://localhost:4000/');;
       $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
+        localsocket.emit('payload', $('#m').val());
         $('#m').val('');
         return false;
       });
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
-        localsocket.emit('chat message', msg);
-      });
-      localsocket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
+      socket.on('payload', function(msg){
+        $('#messages').append($('<li>').text(msg.text + " : " + msg.user_name));
+        localsocket.emit('payload', msg);
       });
     </script>
   </body>
